Safari fix: items were not centered

--- a/theme/static/css/style.sass
+++ b/theme/static/css/style.sass
@@ -292,6 +292,7 @@ body
   section:nth-of-type(2)
     display: flex
     flex-direction: column
+    align-items: center
 
     h2, p
       flex: 1 100%
